<resources>
    <string name="app_name">Quiz</string>
    <string name="a_flag">A flag</string>
    <string name="country_flag_quiz">Country Flag Quiz</string>
    <string name="name">Name</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please enter your name.</string>
    <string name="start">Start</string>
    <string name="submit">Submit</string>
    <string name="result">Result</string>
    <string name="result_image">Result image</string>
    <string name="good_result_message">Congratulations</string>
    <string name="result_score">Your score is 10 out of 10.</string>
    <string name="try_again_btn">Try again</string>
    <string name="finish_quiz">Finish Quiz</string>
    <string name="go_to_next_question">Go to next question</string>
    <string name="congratulations">Congratulations, %1$s!</string>
    <string name="good_luck_next_time">Good luck next time, %1$s!</string>
    <string name="your_score_is_out_of">Your score is %1$s out of %2$s</string>
</resources>